--- a/parallax-template/index.html
+++ b/parallax-template/index.html
@@ -15,11 +15,11 @@
 <body>
   <nav class="white" role="navigation">
     <div class="nav-wrapper container">
-      <a id="logo-container" href="#" class="brand-logo">COVID-19 Info App</a>
+      <a id="logo-container" href="index.html" class="brand-logo">COVID-19 Info App</a>
       <ul class="right hide-on-med-and-down">
-        <li><a href="#">Statistics</a></li>
-        <li><a href="#">Test Locations</a></li>
-        <li><a href="#">Resources</a></li>
+        <li><a href="statistics.html">Statistics</a></li>
+        <li><a href="testLocations.html">Test Locations</a></li>
+        <li><a href="resources.html">Resources</a></li>
       </ul>
 
       <ul id="nav-mobile" class="sidenav">
