--- a/parallax-template/index.html
+++ b/parallax-template/index.html
@@ -33,7 +33,7 @@
     <div class="section no-pad-bot">
       <div class="container">
         <br><br>
-        <h1 class="header center brown-text text-lighten-2">Find Important Local Information</h1>
+        <h1 class="header center brown-text text-lighten-2">Find Important Information</h1>
         <div class="row center">
           <h5 class="header col s12 light">Keep up to date with local statistics</h5>
         </div>
