tried to add some script code but came up short. didnt really add much of anything

--- a/statistics.html
+++ b/statistics.html
@@ -88,27 +88,41 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                <tr1>
+                                <tr>
                                     <td>x</td>
                                     <td>x</td>
                                     <td>x</td>
                                     <td>x</td>
                                     <td>x</td>
-                                </tr1>
-                                <tr2>
+                                </tr>
+                                <tr>
                                     <td>x</td>
                                     <td>x</td>
                                     <td>x</td>
                                     <td>x</td>
                                     <td>x</td>
-                                </tr2>
-                                <tr3>
+                                </tr>
+                                <tr>
                                     <td>x</td>
                                     <td>x</td>
                                     <td>x</td>
                                     <td>x</td>
                                     <td>x</td>
-                                </tr3>
+                                </tr>
+                                <tr>
+                                    <td>x</td>
+                                    <td>x</td>
+                                    <td>x</td>
+                                    <td>x</td>
+                                    <td>x</td>
+                                </tr>
+                                <tr>
+                                    <td>x</td>
+                                    <td>x</td>
+                                    <td>x</td>
+                                    <td>x</td>
+                                    <td>x</td>
+                                </tr>
                             </tbody>
                         </table>
 
@@ -159,9 +173,10 @@
 
 
     <!--  Scripts-->
-    <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="js/materialize.js"></script>
     <script src="js/init.js"></script>
+    <script src="js/statistics.js"></script>
 </body>
 
 </html>
