tried to get the information to print into the table but failed

--- a/statistics.html
+++ b/statistics.html
@@ -87,7 +87,7 @@
                                     <th>Population</th>
                                 </tr>
                             </thead>
-                            <tbody>
+                            <tbody id='tableData'>
                                 <tr>
                                     <td>x</td>
                                     <td>x</td>
