--- a/statistics.html
+++ b/statistics.html
@@ -81,10 +81,10 @@
                             <thead>
                                 <tr>
                                     <th>Country</th>
+                                    <th>Date</th>
                                     <th>Confirmed</th>
-                                    <th>Recovered</th>
                                     <th>Deaths</th>
-                                    <th>Population</th>
+                                    <th>Recovered</th>
                                 </tr>
                             </thead>
                             <tbody id='tableData'>
