made a bunch of changes to js and to html of test locations and statistics page so now the buttons work as wanted

--- a/testLocations.html
+++ b/testLocations.html
@@ -36,37 +36,23 @@
             <div class="card horizontal">
                 <div class="card-stacked">
                     <div class="card-content">
-                        <p>Or enter a family member's (address, zip code, etc.) and find one near them</p>
+                        <p>Choose from the following options!</p>
                     </div>
-                    <div class="card-action">
-                        <!-- Small modal -->
-                        <button type="button" class="btn btn-primary" data-toggle="modal"
-                            data-target=".bd-example-modal-sm">Choose your
-                            location</button>
-                        <div class="modal fade bd-example-modal-sm" tabindex="-1" role="dialog"
-                            aria-labelledby="mySmallModalLabel" aria-hidden="true">
-                            <div class="modal-dialog modal-sm" role="document">
-                                <div class="modal-content">
-                                    <form class="form-inline">
-                                        <div class="form-group mb-2">
-                                            <label for="staticEmail2" class="sr-only">Enter a zip code</label>
-                                            <input type="text" readonly class="form-control-plaintext" id="staticEmail2"
-                                                value="email@example.com">
-                                        </div>
-                                        <div class="form-group mx-sm-3 mb-2">
-                                            <label for="inputPassword2" class="sr-only">90210</label>
-                                            <input type="password" class="form-control" id="inputPassword2"
-                                                placeholder="Password">
-                                        </div>
-                                        <button type="submit" class="btn btn-primary mb-2">See test locations</button>
-                                    </form>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                    <a class='dropdown-trigger btn' href='#' data-target='dropdown1'>Drop Me!</a>
+                    <!-- Dropdown Structure -->
+                    <ul id='dropdown1' class='dropdown-content'>
+                        <li><a href="#!">one</a></li>
+                        <li><a href="#!">two</a></li>
+                        <li class="divider" tabindex="-1"></li>
+                        <li><a href="#!">three</a></li>
+                        <li><a href="#!"><i class="material-icons">view_module</i>four</a></li>
+                        <li><a href="#!"><i class="material-icons">cloud</i>five</a></li>
+                    </ul>
                 </div>
             </div>
         </div>
+    </div>
+    </div>
     </div>
 
 
@@ -113,6 +99,7 @@
     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script src="js/materialize.js"></script>
     <script src="js/init.js"></script>
+    <script src="js/testLocations.js"></script>
 </body>
 
 </html>
