--- a/statistics.html
+++ b/statistics.html
@@ -39,30 +39,17 @@
                         <p>This can be your location, the location of a friend or family member, or anywhere else in the
                             world!</p>
                     </div>
-                    <div class="card-action">
-                        <!-- Small modal -->
-                        <button type="button" class="btn btn-primary" data-toggle="modal"
-                            data-target=".bd-example-modal-sm">Choose your
-                            location</button>
-                        <div class="modal fade bd-example-modal-sm" tabindex="-1" role="dialog"
-                            aria-labelledby="mySmallModalLabel" aria-hidden="true">
-                            <div class="modal-dialog modal-sm" role="document">
-                                <div class="modal-content">
-                                    <form class="form-inline">
-                                        <div class="form-group mb-2">
-                                            <label for="staticEmail2" class="sr-only">Enter a zip code</label>
-                                            <input type="text" readonly class="form-control-plaintext" id="staticEmail2"
-                                                value="email@example.com">
-                                        </div>
-                                        <div class="form-group mx-sm-3 mb-2">
-                                            <label for="inputPassword2" class="sr-only">90210</label>
-                                            <input type="password" class="form-control" id="inputPassword2"
-                                                placeholder="Password">
-                                        </div>
-                                        <button type="submit" class="btn btn-primary mb-2">See statistics</button>
-                                    </form>
-                                </div>
-                            </div>
+                    <!-- Modal Trigger -->
+                    <a class="waves-effect waves-light btn modal-trigger" href="#modal1">Modal</a>
+
+                    <!-- Modal Structure -->
+                    <div id="modal1" class="modal">
+                        <div class="modal-content">
+                            <h4>Modal Header</h4>
+                            <p>A bunch of text</p>
+                        </div>
+                        <div class="modal-footer">
+                            <a href="#!" class="modal-close waves-effect waves-green btn-flat">Agree</a>
                         </div>
                     </div>
                 </div>
