--- a/testLocations.html
+++ b/testLocations.html
@@ -41,12 +41,30 @@
                     <a class='dropdown-trigger btn' href='#' data-target='dropdown1'>Drop Me!</a>
                     <!-- Dropdown Structure -->
                     <ul id='dropdown1' class='dropdown-content'>
-                        <li><a href="#!">one</a></li>
-                        <li><a href="#!">two</a></li>
+                        <li><a href="#!">Arizona</a></li>
                         <li class="divider" tabindex="-1"></li>
-                        <li><a href="#!">three</a></li>
-                        <li><a href="#!"><i class="material-icons">view_module</i>four</a></li>
-                        <li><a href="#!"><i class="material-icons">cloud</i>five</a></li>
+                        <li><a href="#!">California</a></li>
+                        <li class="divider" tabindex="-1"></li>
+                        <li><a href="#!">Delaware</a></li>
+                        <li class="divider" tabindex="-1"></li>
+                        <li><a href="#!">Florida</a></li>
+                        <li class="divider" tabindex="-1"></li>
+                        <li><a href="#!">Massachusetts</a></li>
+                        <li class="divider" tabindex="-1"></li>
+                        <li><a href="#!">Nevada</a></li>
+                        <li class="divider" tabindex="-1"></li>
+                        <li><a href="#!">New Jersey</a></li>
+                        <li class="divider" tabindex="-1"></li>
+                        <li><a href="#!">New York</a></li>
+                        <li class="divider" tabindex="-1"></li>
+                        <li><a href="#!">Pennsylvania</a></li>
+                        <li class="divider" tabindex="-1"></li>
+                        <li><a href="#!">Texas</a></li>
+                        <li class="divider" tabindex="-1"></li>
+                        <li><a href="#!">Utah</a></li>
+                        <li class="divider" tabindex="-1"></li>
+                        <li><a href="#!">Washington</a></li>
+                        <li class="divider" tabindex="-1"></li>
                     </ul>
                 </div>
             </div>
