fixed the button layout

--- a/statistics.html
+++ b/statistics.html
@@ -32,16 +32,15 @@
     <div class="container-fluid">
         <!-- Card -->
         <div class="col s12 m3 l3 cardContainer">
-            <h4 class="header">Choose a location</h4>
+            <h4 class="header">Enter a state below :</h4>
             <div class="card horizontal">
                 <div class="card-stacked">
                     <div class="card-content">
-                        <p>This can be your location, the location of a friend or family member, or anywhere else in the
-                            world!</p>
+                        <p>This can be your state, the state of a friend or family member, or anywhere else in the
+                            Country!</p>
                     </div>
                     <!-- Modal Trigger -->
-                    <a class="waves-effect waves-light btn modal-trigger" href="#modal1">Modal</a>
-
+                    <button data-target="modal1" class="btn-large modal-trigger">Enter State</button>
                     <!-- Modal Structure -->
                     <div id="modal1" class="modal">
                         <div class="modal-content">
