--- a/testLocations.html
+++ b/testLocations.html
@@ -38,7 +38,7 @@
                     <div class="card-content">
                         <p>Choose from the following options!</p>
                     </div>
-                    <a class='dropdown-trigger btn' href='#' data-target='dropdown1'>Drop Me!</a>
+                    <a class='dropdown-trigger btn-large' href='#' data-target='dropdown1'>Click Here</a>
                     <!-- Dropdown Structure -->
                     <ul id='dropdown1' class='dropdown-content'>
                         <li><a href="#!">Arizona</a></li>
