got the search to populate a card with all the information we want by state

--- a/statistics.html
+++ b/statistics.html
@@ -31,6 +31,7 @@
 
     <div class="container-fluid">
         <!-- Card -->
+        <!-- Separate container for the state search -->
         <div class="col s12 m3 l3 cardContainer">
             <h4 class="state-header">Enter a state below :</h4>
             <div class="card state-card horizontal">
@@ -62,6 +63,14 @@
                     </div>
                 </div>
             </div>
+        </div>
+        <!-- Hidden card where the state info goes -->
+        <div class="col s12 m3 l3 cardContainer">
+            <div id="current-search">
+            </div>
+        </div>
+        <!-- Separate container for world statistics -->
+        <div class="col s12 m3 l3 cardContainer">
             <div class="col s12 m9 l9">
                 <h4 class="world-header">World Statistics</h4>
                 <div class="card world-card horizontal">
