--- a/statistics.html
+++ b/statistics.html
@@ -64,9 +64,31 @@
                 </div>
             </div>
         </div>
-        <!-- Hidden card where the state info goes -->
+        <!-- Another card where the state info goes -->
         <div class="col s12 m3 l3 cardContainer">
             <div id="current-search">
+            </div>
+            <div id="modalTwo" class="hide">
+                <button data-target="modal2" class="btn-large modal-trigger">Choose another state</button>
+                <!-- Modal Structure -->
+                <div id="modal2" class="modal">
+                    <div class="modal-content">
+                        <h4>Choose another state</h4>
+                        <div class="row">
+                            <form class="col s12">
+                                <div class="row">
+                                    <div class="input-field col s6">
+                                        <input placeholder="State..." id="search-term" type="text" class="validate">
+                                    </div>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" id="submit-button"
+                            class="modal-close waves-effect waves-green btn-flat">Submit</button>
+                    </div>
+                </div>
             </div>
         </div>
         <!-- Separate container for world statistics -->
