--- a/parallax-template/testLocations.html
+++ b/parallax-template/testLocations.html
@@ -64,6 +64,23 @@
                             </div>
                         </div>
                     </div>
+                    <div class="input-field col s12">
+                        <select id='states'>
+                            <option value="" disabled selected>Choose a state</option>
+                            <option value="arizona">Arizona</option>
+                            <option value="california">California</option>
+                            <option value="delaware">Delaware</option>
+                            <option value="florida">Florida</option>
+                            <option value="massachusetts">Massachusetts</option>
+                            <option value="nevada">Nevada</option>
+                            <option value="new-jersey">New Jersey</option>
+                            <option value="new-york">New York</option>
+                            <option value="pennsylvania">Pennsylvania</option>
+                            <option value="texas">Texas</option>
+                            <option value="utah">Utah</option>
+                            <option value="washington">Washington</option>
+                        </select>
+                    </div>
                 </div>
             </div>
         </div>
