finished the testing locations js and fully functional. also added sme cosemtic changes to cards

--- a/testLocations.html
+++ b/testLocations.html
@@ -30,7 +30,7 @@
     </nav>
 
     <div class="container-fluid">
-        <!-- Card -->
+        <!--  First Card with select drop down -->
         <div class="col s12 m3 l3 cardContainer">
             <h4 class="header">Find a test center near you</h4>
             <div class="card horizontal">
@@ -56,6 +56,11 @@
                         </select>
                     </div>
                 </div>
+            </div>
+        </div>
+        <!-- Second Card with test locations  -->
+        <div class="col s12 m3 l3 cardContainer">
+            <div id='testing-location'>
             </div>
         </div>
     </div>
