finished everything should be fully functioning

--- a/statistics.html
+++ b/statistics.html
@@ -50,14 +50,14 @@
                                 <form class="col s12">
                                     <div class="row">
                                         <div class="input-field col s6">
-                                            <input placeholder="State..." id="search-term" type="text" class="validate">
+                                            <input placeholder="State..." id="search-term-1" type="text" class="validate">
                                         </div>
                                     </div>
                                 </form>
                             </div>
                         </div>
                         <div class="modal-footer">
-                            <button type="button" id="submit-button"
+                            <button type="button" id="submit-button-1"
                                 class="modal-close waves-effect waves-green btn-flat">Submit</button>
                         </div>
                     </div>
